--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,3 +1,7 @@
-<h1>Welcome to our site!</h1>
-<button routerLink="/products">Show Products</button>
-<button routerLink="/add-products">Add New Product</button>
+<div class="product-container">
+  <app-product></app-product>
+</div>
+<mat-divider/>
+<div class="add-product-container">
+  <app-add-product></app-add-product>
+</div>
