--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
 </head>
 <body>
+<mat-toolbar>
+  <span>
+  <button mat-raised-button routerLink="">
+    <mat-icon>home</mat-icon>
+    Home
+  </button>
+</span>
+  <h1 class="app-title">Angular Demo</h1>
+</mat-toolbar>
 <router-outlet></router-outlet>
 </body>
 </html>
