--- a/frontend/src/app/update-product/update-product.component.html
+++ b/frontend/src/app/update-product/update-product.component.html
@@ -1,6 +1,16 @@
 <form (ngSubmit)="updateProduct()">
-  <input type="text" [(ngModel)]="product.name" name="name" placeholder="Name">
-  <input type="text" [(ngModel)]="product.description" name="description" placeholder="Description">
-  <input type="text" [(ngModel)]="product.extId" name="ext_id" placeholder="External ID">
-  <button type="submit">Update Product</button>
+  <mat-form-field>
+    <mat-label>Name</mat-label>
+    <input matInput type="text" [(ngModel)]="product.name" name="name" placeholder="Name">
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <input matInput type="text" [(ngModel)]="product.description" name="description" placeholder="Description">
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>External Identifier</mat-label>
+    <input matInput type="text" [(ngModel)]="product.extId" name="ext_id" placeholder="External ID">
+  </mat-form-field>
+  <button mat-raised-button type="submit">Update Product</button>
 </form>
+
