Remove extId and fix styling

--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -1,16 +1,23 @@
-<form (ngSubmit)="addProduct()"
+<form #productForm="ngForm" (ngSubmit)="addProduct(productForm)"
       style="display: flex; flex-direction: column; gap: 16px; max-width: 400px; margin: auto;">
   <mat-form-field appearance="fill">
     <mat-label>Name</mat-label>
-    <input matInput type="text" [(ngModel)]="product.name" name="name" placeholder="Name">
+    <input matInput type="text" [(ngModel)]="product.name" name="name" placeholder="Name" required #name="ngModel">
+    @if (name.invalid && name.touched) {
+      <mat-error>
+        @if (name.errors?.['required']) {
+          <span>Name is required.</span>
+        }
+      </mat-error>
+    }
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Description</mat-label>
     <input matInput type="text" [(ngModel)]="product.description" name="description" placeholder="Description">
   </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>External Identifier</mat-label>
-    <input matInput type="text" [(ngModel)]="product.extId" name="ext_id" placeholder="External ID">
-  </mat-form-field>
-  <button mat-raised-button color="primary" type="submit" style="align-self: flex-end;">Add New Product</button>
+  <button mat-raised-button color="primary" type="submit" style="align-self: flex-end;"
+          [disabled]="productForm.invalid">
+    <mat-icon>add</mat-icon>
+    Add New Product
+  </button>
 </form>
