--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,14 +1,23 @@
-<h2>Products</h2>
-<mat-list>
-  @for (product of products(); track product.id) {
-    <mat-list-item>
-      <h4 matListItemTitle><span>{{ product.extId }}. </span><span>{{ product.name }}</span></h4>
-      <p matListItemLine>{{ product.description }}</p>
-      <p matListItemMeta>
-        <button mat-raised-button (click)="deleteProduct(product)">Delete</button>
-        <button mat-raised-button (click)="updateProduct(product)">Update</button>
-      </p>
-    </mat-list-item>
-  }
-</mat-list>
-
+@if (products().length > 0) {
+  <mat-list>
+    @for (product of products(); let i = $index; track product.id) {
+      <mat-list-item color="primary">
+        <h4 matListItemTitle><span>{{ i + 1 }}. </span><span>{{ product.name }}</span></h4>
+        <p matListItemLine>{{ product.description }}</p>
+        <p matListItemMeta>
+          <button mat-icon-button color="warn" (click)="deleteProduct(product)">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" (click)="updateProduct(product)">
+            <mat-icon>update</mat-icon>
+          </button>
+        </p>
+      </mat-list-item>
+    }
+  </mat-list>
+} @else {
+  <div class="no-products-message">
+    <mat-icon color="accent" style="vertical-align: middle;">info</mat-icon>
+    <span>No products to list yet! Why not add one?</span>
+  </div>
+}
