--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,7 +1,10 @@
-<div class="product-container">
-  <app-product></app-product>
-</div>
-<mat-divider/>
-<div class="add-product-container">
-  <app-add-product></app-add-product>
+<h2>Products</h2>
+<div class="container">
+  <div class="product-container" #scrollContainer>
+    <app-product/>
+  </div>
+  <mat-divider color="accent" class="vertical-divider"/>
+  <div class="add-product-container">
+    <app-add-product (productListUpdated)="scrollToBottom()"/>
+  </div>
 </div>
