Add product service jasmine test - unsubscribe in product component on destroy

--- a/frontend/src/app/add-product/add-product.component.html
+++ b/frontend/src/app/add-product/add-product.component.html
@@ -6,7 +6,7 @@
     @if (name.invalid && name.touched) {
       <mat-error>
         @if (name.errors?.['required']) {
-          <span>Name is required.</span>
+          <span class="error-message">Name is required.</span>
         }
       </mat-error>
     }
