Create BFF google cloud login flow

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,8 +15,8 @@
     Home
   </button>
   <h1 class="app-title">Angular Demo</h1>
-  <h1 class="welcome-message">Welcome {{ userData()?.name }}</h1>
-  <button mat-raised-button (click)="logOut()" color="accent" [disabled]="isLoggedOut()">
+  <h1 class="welcome-message">Welcome {{ userData()?.email }}</h1>
+  <button mat-raised-button (click)="logOut()" color="accent">
     <mat-icon>logout</mat-icon>
     Logout
   </button>
