--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-@if (products().length > 0) {
+@if (products() && products()!!.length > 0) {
   <mat-list>
     @for (product of products(); let i = $index; track product.id) {
       <mat-list-item color="primary">
